# SSM-Commander

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.codex/environments/: environment.toml
.github/workflows/: release.yml  security.yml
docs/: dependency-setup.md  macos-native-rdp-smartcard.md  public-release-checklist.md  releasing.md  troubleshooting.md
scripts/: clean-tauri.mjs  dev-local.mjs  free-dev-port.mjs  stage-freerdp-macos.mjs  stage-guacd-macos.mjs  tauri-build.mjs
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/macos/: ssmc_freerdp.h  ssmc_freerdp.m
src-tauri/src/: aws_cli.rs  commands.rs  console.rs  credentials.rs  dependencies.rs  diagnostics.rs  guacd.rs  lib.rs  main.rs  models.rs  native_freerdp.rs  ports.rs  preferences.rs  process_registry.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src-tauri/src/sessions/: mod.rs  rdp.rs  ssh.rs  ssm.rs
src/app/: App.tsx  consoleLifecycle.test.ts  consoleLifecycle.ts  consoleSessionRequest.test.ts  consoleSessionRequest.ts  credentialForm.test.ts  credentialForm.ts  navigation.test.ts  navigation.ts  rdpDisplaySize.test.ts  rdpDisplaySize.ts  styles.css  tooltipPlacement.test.ts  tooltipPlacement.ts  tunnelForm.test.ts  tunnelForm.ts
src/components/: StatusPill.tsx
src/features/credentials/: list.test.ts  list.ts
src/features/instances/: connectionDefaults.test.ts  connectionDefaults.ts  credentialDefaults.test.ts  credentialDefaults.ts  filters.test.ts  filters.ts  selection.test.ts  selection.ts  sorting.test.ts  sorting.ts  tableColumns.test.tsx  tableColumns.tsx
src/lib/: tauri.ts
src/types/: models.ts
(+2 files in other folders)
